# dify-zhipu-plugin

./: .difyignore  .gitignore  README.md  manifest.yaml  pyproject.toml
.github/workflows/: release.yml
docs/: README.md  architecture.md  development-and-release.md
models/: _common.py
models/llm/: _position.yaml  glm-5.1.yaml  glm-5.yaml  llm.py
models/text_embedding/: text_embedding.py
provider/: zhipuai.py  zhipuai.yaml
